<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#30000000"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="@dimen/guide_step_conentview_width"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/guide_step_view_dir"
        android:background="@drawable/ic_tutorial_dlg_bg"
        android:minHeight="@dimen/guide_step_conentview_minheight"
        android:orientation="vertical"
        android:padding="@dimen/guide_step_conentview_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/guide_step10_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:id="@+id/tv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/padding_comm"
            android:text="@string/guide_step_next"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_comm" />

        <TextView
            android:id="@+id/tv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/guide_step_contendata_dir"
            android:padding="@dimen/padding_comm"
            android:text="@string/tv_close"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_comm" />
    </LinearLayout>


</RelativeLayout>