<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_level3"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@color/white_level1"
        android:minWidth="@dimen/menu_minwidth"
        android:orientation="vertical"
        android:padding="@dimen/padding_small">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/logo_layout"
                android:layout_width="@dimen/img_size_comm"
                android:layout_height="@dimen/img_size_comm">

                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="@dimen/img_size_comm"
                    android:layout_height="@dimen/img_size_comm"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/tv_click"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/ic_mark"
                    android:gravity="center"
                    android:minHeight="20dp"
                    android:minWidth="20dp"
                    android:textColor="@color/white_level1" />
            </RelativeLayout>


            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_comm"
                android:layout_toRightOf="@id/logo_layout"
                android:text="@string/tv_name"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_comm" />

            <TextView
                android:id="@+id/tv_ver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_name"
                android:layout_marginLeft="@dimen/margin_comm"
                android:layout_marginTop="2dp"
                android:layout_toRightOf="@id/logo_layout"
                android:text="@string/tv_ver"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_comm" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/item_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_item_compare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:minWidth="200dp"
                android:padding="8dp"
                android:text="@string/tv_item_compare"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_comm" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray_level1"></View>

            <TextView
                android:id="@+id/tv_item_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:minWidth="200dp"
                android:padding="@dimen/padding_comm"
                android:text="@string/tv_item_share"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_comm" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray_level1"></View>

            <TextView
                android:id="@+id/tv_item_guide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:minWidth="200dp"
                android:padding="@dimen/padding_comm"
                android:text="@string/tv_item_guide"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_comm" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray_level1"></View>

            <TextView
                android:id="@+id/tv_item_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:minWidth="200dp"
                android:padding="@dimen/padding_comm"
                android:text="@string/tv_item_call"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_comm" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray_level1"></View>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_colse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:padding="@dimen/padding_comm"
            android:text="@string/tv_close"
            android:textColor="@color/green"
            android:textSize="@dimen/text_size_comm" />
    </LinearLayout>


</RelativeLayout>