<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_level1">

        <ImageView
            android:id="@+id/iv_menu"
            android:layout_width="@dimen/img_menu_size_comm"
            android:layout_height="@dimen/img_menu_size_comm"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_menu_selector" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_level3"
        android:orientation="vertical"
        android:paddingTop="@dimen/padding_comm">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/phonetics_title"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_large" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@color/gray_level3"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bt_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bt_txtleft_selector"
                android:paddingBottom="@dimen/padding_small"
                android:paddingLeft="@dimen/padding_comm"
                android:paddingRight="@dimen/padding_comm"
                android:paddingTop="@dimen/padding_small"
                android:text="@string/bt_left_txt"
                android:textColor="@drawable/bt_txt_color"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/bt_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bt_txtright_selector"
                android:paddingBottom="@dimen/padding_small"
                android:paddingLeft="@dimen/padding_comm"
                android:paddingRight="@dimen/padding_comm"
                android:paddingTop="@dimen/padding_small"
                android:text="@string/bt_right_txt"
                android:textColor="@drawable/bt_txt_color"
                android:textSize="@dimen/text_size_small" />

        </LinearLayout>

        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="#00000000"
            android:divider="@color/gray_level3"
            android:dividerHeight="1px"
            android:listSelector="#00000000"></ListView>
    </LinearLayout>

</LinearLayout>